ファイルの追加

--- a/test/index.html
+++ b/test/index.html
@@ -4,34 +4,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>テーブル</title>
 </head>
 <link rel="stylesheet" href="style.css">
 <body>
         <table border="2" style="border-collapse: collapse">
             <tr>
-              <th>時間/教室</th> <th>F301</th> <th>F302</th> <th>F303</th>
+              <th>時間/教室</th> <th>F301</th> <th>F302</th> <th>F303</th> <th>F304</th> <th>F305</th>
             </tr>          
             <tr>
-              <td>9:00-10:40</td> <td></td> <td></td> <td></td>
+              <th id="main">9:00-10:40</th> <td></td> <td></td> <td></td> <td></td> <td></td>
             </tr>        
             <tr>
-              <td>10:50-12:30</td> <td></td> <td></td> <td></td>
+              <th id="main">10:50-12:30</th> <td></td> <td></td> <td></td> <td></td> <td></td>
             </tr>
             <tr>
-              <td>昼休み</td> <td></td> <td></td> <td></td>
+              <th id="main" style="background-color:darkgray ;">昼休み</th> <td></td> <td></td> <td></td> <td></td> <td></td>
             </tr>
             <tr>
-                <td>13:20-15:00</td> <td></td> <td></td> <td></td>
+              <th id="main">13:20-15:00</th> <td></td> <td></td> <td></td> <td></td> <td></td>
             </tr>
             <tr>
-                <td>15:10-16:50</td> <td></td> <td></td> <td></td>
+              <th id="main">15:10-16:50</th> <td></td> <td></td> <td></td> <td></td> <td></td>
             </tr>
             <tr>
-                <td>17:00-18:40</td> <td></td> <td></td> <td></td>
+              <th id="main">17:00-18:40</th> <td></td> <td></td> <td></td> <td></td> <td></td>
             </tr>
             <tr>
-                <td>18:50-20:30</td> <td></td> <td></td> <td></td>
+              <th id="main">18:50-20:30</th> <td></td> <td></td> <td></td> <td></td> <td></td>
             </tr>
           </table>
 </body>
